# OCVoice

./: .gitignore  AGENTS.md  README.md  config.toml  install.bat  install.sh  pyproject.toml  start.sh
.opencode/commands/: voice.md
.opencode/plugins/: ocvoice.js
ocvoice/: __init__.py  __main__.py  config.py  daemon.py
ocvoice/audio/: __init__.py  capture.py  vad.py  wake.py
ocvoice/cli/: __init__.py  ipc.py  select.py  test_wake.py
ocvoice/intent/: __init__.py  intents.py  parser.py
ocvoice/opencode/: __init__.py  client.py  ide_discovery.py  launcher.py
ocvoice/speech/: __init__.py  speaker.py  stt.py  tts.py  vosk_stt.py
ocvoice/ui/: __init__.py  menubar.py  notify.py  overlay.py  settings_window.py  tray.py
tests/: __init__.py  test_client.py  test_intents.py  test_session.py
