[project]
name = "ocvoice"
version = "0.1.0"
description = "Voice control for OpenCode AI coding agent — speech-to-text, speaker verification, intent parsing"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "OCVoice Team" }
]
keywords = ["opencode", "voice-control", "speech-to-text", "speaker-verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "rumps>=0.4.0",
    "openwakeword>=0.5.0",
    "faster-whisper>=1.0.0",
    "edge-tts>=6.1.0",
    "webrtcvad>=2.0.10",
    "customtkinter>=5.2.0",
    "soundfile>=0.12.0",
    "resemblyzer>=0.1.3",
]

[project.optional-dependencies]
cuda = [
    "ctranslate2>=4.0.0",
]
windows = [
    "pywin32>=306",
]

[project.scripts]
ocvoice = "ocvoice.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ocvoice", "ocvoice.audio", "ocvoice.speech", "ocvoice.intent", "ocvoice.opencode", "ocvoice.ui"]

[tool.setuptools.package-data]
ocvoice = ["../config.toml"]

[tool.pyinstaller]
paths = ["."]
hidden_imports = [
    "sounddevice",
    "numpy",
    "faster_whisper",
    "openwakeword",
    "pystray",
]
